infra/network/gateway/gw-test.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test
  namespace: gateway
  annotations:
    cert-manager.io/issuer: cloudflare-issuer
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTPS
      port: 443
      name: https-gateway
      hostname: "*.vanillax.xyz"
      tls:
        certificateRefs:
          - kind: Secret
            name: test-cert
      allowedRoutes:
        namespaces:
          from: All
#    - protocol: TLS
#      port: 443
#      name: proxmox-tls-passthrough
#      hostname: "proxmox.euclid.stonegarden.dev"
#      tls:
#        mode: Passthrough
#      allowedRoutes:
#        namespaces:
#          from: All
